--- a/Styling The Website.css
+++ b/Styling The Website.css
@@ -173,7 +173,7 @@
 	width: 100%;
 	overflow:visible;
 	background-size: 100%;
-	backgroung-repeat: no-repeat;
+	background-repeat: no-repeat;
 }
 /*Styling For Boxes*/
 .Container1{
@@ -211,8 +211,8 @@
 	margin-left:-5%;
 	margin-right:2%;
 	box-sizing:border-box;
-	overflow: hidden;
-	border-colour:black;
+	overflow: hidden;	
+	border-color: black;
     border-style: solid;
 	border-width: 2px;
 	background-color: white;
@@ -274,8 +274,8 @@
 	margin-left:-5%;
 	margin-right:2%;
 	box-sizing:border-box;
-	overflow: hidden;
-	border-colour:black;
+	overflow: hidden;	
+	border-color: black;
     border-style: solid;
 	border-width: 2px;
 	background-color: white;
@@ -407,7 +407,7 @@
 .Image-Section{
 	background-color: #f17008;
 	background-size: 100%;
-	backgroung-repeat: no-repeat;
+	background-repeat: no-repeat;
 	display:grid;
 	grid-template-columns: 50% 50%;
 }
@@ -417,7 +417,7 @@
 	margin-left:1%;
 	margin-right:10%;
 	background-size: 100%;	
-	backgroung-repeat: no-repeat;
+	background-repeat: no-repeat;
 }
 .Image-Section p{
 	font-size:145%;
